--- a/main.html
+++ b/main.html
@@ -4,10 +4,14 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>My Favourite Animal - Yeontan</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <h1>My Favourite Animal is Dog</h1>
+  <p>This is Yeontan, my favourite dog.</p>
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQh7IlW_4zuWXqZ9wh88FD00LFjwyxTF_d6EA&s" alt="Yeontan, a cute fluffy black and brown Pomeranian dog"> 
     <script type="text/javascript" src="./script.js">
 </script>
 
